apps/default/speedtest-tracker/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Speedtest tracker
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: openspeedtest
    gethomepage.dev/name: Speedtest Tracker
spec:
  rules:
    # DNS will be replaced by kustomize
    - host: speedtest.$(DNS)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  name: http
